--- a/scss/grupos/_grupmqmobile.scss
+++ b/scss/grupos/_grupmqmobile.scss
@@ -19,7 +19,8 @@
                 "grupoc"
                 "grupod";
                 gap: 5px;
-                padding: 3px;
+
+                padding: 5px 3px 5px 3px ;
                 filter: drop-shadow(0 0 15px #000);
                 #container-a {
                     grid-area: grupoa;
