--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,11 +1,13 @@
 @import "./layout/base";
+@import "./function/variables";
+@import "./function/mixins";
 @import "./index/indexmqmobile";
 @import "./index/indexmqdesktop";
 @import "./grupos/grupmqmobile";
 @import "./grupos/grupmqdesktop";
 @import "./estadios/estadiomqmobile";
 @import "./estadios/estadiomqdesktop";
-@import "./historia/historiamqmobile";
-@import "./historia/historiamqdesktop";
+@import "./noticia/noticiamqmobile";
+@import "./noticia/noticiamqdesktop";
 @import "./contacto/contactmqmobile";
 @import "./contacto/contactmqdesktop";
